2004-01-23  Kenichi Handa  <handa@m17n.org>

	* fns.c (Fmd5): If OBJECT is a buffer different from the current
	one, set buffer to OBJECT temporarily.

2003-08-27  Kenichi Handa  <handa@m17n.org>

	* coding.c (detect_coding_iso2022): While checking a byte sequence
	for CODING_CATEGORY_MASK_ISO_8_2, if we read one extra byte, check
	it in the normal loop.

2003-09-17  Dave Love  <fx@gnu.org>

	* unexalpha.c: Don't include varargs.h.

2003-07-12  Paul Eggert  <eggert@twinsun.com>

	* unexelf.c (unexec): Consider a section to precede the .bss
	section if its addresses overlap that of .bss.

2003-07-07  Nozomu Ando  <nand@mac.com>  (tiny change)

	* buffer.c (Fkill_buffer): Clear charpos cache if necessary.

2003-06-10  Andreas Schwab  <schwab@suse.de>

	* window.c (window_scroll_pixel_based): Move outside a
	multi-glyph character before setting new window start.

	* xdisp.c (in_display_vector_p): New function.
	* dispextern.h (in_display_vector_p): Declare.

2003-06-10  Richard M. Stallman  <rms@gnu.org>

	* window.c (window_scroll_pixel_based): Fix check for reaching BEGV.
	Don't try to make last line fully visible if it is past end of window.

	* window.c (window_scroll_pixel_based): Don't call Fbolp;
	instead, see if the new start pos is at beginning of line.

	* window.c (window_scroll_pixel_based): Exit the move_it_by_lines
	loop whenever it stops making progress.

2003-06-04  Kenichi Handa  <handa@m17n.org>

	* coding.c (encoding_buffer_size): If coding->type is
	coding_type_ccl, double magnification on CRLF encoding.

2003-06-02  Kenichi Handa  <handa@etlken2>

	* buffer.c (Fset_buffer_multibyte): Fix previous change.

2003-05-31  Kenichi Handa  <handa@m17n.org>

	* buffer.c (Fset_buffer_multibyte): Correctly recover a narrowed
	region when a buffer is changed to unibyte.

2003-05-30  Kenichi Handa  <handa@m17n.org>

	* coding.c (ccl_coding_driver): Set ccl->eight_bit_control
	properly before calling ccl_driver.
