@@ -1,3 +1,9 @@
+2004-02-18  Jason Rumney  <jasonr@gnu.org>
+
+	* unexw32.c (_start): Remove _fmode initialization.
+
+	* emacs.c (main) [WINDOWSNT]: Move it here.
+
 2004-01-23  Kenichi Handa  <handa@m17n.org>
 
 	* fns.c (Fmd5): If OBJECT is a buffer different from the current
